...
          ),
        ),
        actions: [
          Padding(
            padding: const EdgeInsets.only(right: 20.0),
            child: IconButton(
              key: ValueKey('appliance_help_button'),
              icon: Icon(Icons.help),
              onPressed: _showHelpMenu,
              iconSize: 35,
            ),
          ),
        ],
...
                    children: <Widget>[
                      SizedBox(height: 30.0),
                      Expanded(
                        child: appliances.isEmpty
                            ? Center(
                                child: Text(
                                  "No appliances have been added. Click the plus icon to add your first appliance!",
                                  textAlign: TextAlign.center,
                                  style: TextStyle(
                                    fontSize: 16,
                                    color: Colors.grey[600],
                                  ),
                                ),
...
                                },
                              ),
                      ),
                      Padding(
                        padding: const EdgeInsets.all(8.0),
                        child: ElevatedButton(
                          key: Key('add_appliance_button'),
                          onPressed: _showAddApplianceDialog,
                          style: ElevatedButton.styleFrom(
                            backgroundColor: const Color(0xFFDC945F),
                            foregroundColor: Colors.white,
                            fixedSize: const Size(48.0, 48.0),
                            shape: const CircleBorder(),
...
