...
                        );
                      }).toList(),
                    ),
                    const SizedBox(height: 24),
                    Center(
                      child: ElevatedButton(
                        //key: Key('recipe_button'),
                        onPressed: _submitRecipe,
                        style: ElevatedButton.styleFrom(
                          backgroundColor: const Color(0xFFDC945F),
                          padding: const EdgeInsets.symmetric(
                              horizontal: 40, vertical: 20),
                        ),
...
